# linkcheck-rs

./: Cargo.toml
src/: main.rs
