[package]
name = "linkcheck-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
scraper = "0.14.0"
